# vocal-separator-web

./: .gitignore  README.md  agent.py  app.py  cli.py  requirements.txt  separation.py
backend/: .env.example  Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
python/: agent.py  requirements.txt  separation.py
scripts/: build.sh  deploy.sh
